fix WebinarOverviewHome.jsx & Collapse description

--- a/src/components/Webinars/WebinarDescription/webinarDesctiption.module.scss
+++ b/src/components/Webinars/WebinarDescription/webinarDesctiption.module.scss
@@ -30,7 +30,7 @@
   .description {
     padding: 27px 0 0 0;
 
-    p {
+    .programTitle {
       color: #D9D9D9;
       font-size: 20px;
       font-style: normal;
